# PyDentity-Wallet

./: .env.example  .flaskenv  .gitignore  CREDENTIAL_FLOW.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
agent/: Dockerfile  configs.yml
agent/caddy/: Dockerfile
app/: __init__.py  operations.py  utils.py
app/handlers/: errors.py
app/models/: __init__.py  base.py  connection.py  credential.py  notification.py  profile.py  webauthn.py  webhooks.py
app/plugins/: __init__.py  acapy.py  anoncreds.py  askar.py  scanner.py  vcapi.py  webauthn.py
app/routes/auth/: __init__.py
app/routes/credentials/: __init__.py
app/routes/main/: __init__.py  scanner.py
app/routes/webhooks/: __init__.py  manager.py  models.py
app/static/: html5-qrcode.js  manifest.json  qr-scanner.js  service-worker.js
app/templates/: manifest.jinja
app/templates/components/: footer.jinja  head.jinja  header.jinja
app/templates/components/modals/: connection-details.jinja  connection-processing.jinja  connections.jinja  credential.jinja  credentials.jinja  notification.jinja  scanner.jinja
app/templates/layouts/: base.jinja  base.min.jinja
app/templates/pages/: auth.jinja  credential-offer.jinja  error.jinja  index.jinja  install.jinja  presentation-request.jinja
app/utils/: __init__.py  device.py
docker/: Dockerfile
tests/: test_storage.py
