[project]
name = "pydentity-wallet"
version = "0.1.0"
description = ""
authors = [
    {name = "PatStLouis",email = "patrick.st-louis@opsecid.ca"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flask-session (>=0.8.0,<0.9.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aries-askar (>=0.4.3,<0.5.0)",
    "flask-qrcode (>=3.2.0,<4.0.0)",
    "ruff (>=0.11.2,<0.12.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "webauthn (>=2.5.2,<3.0.0)",
    "pydantic (>=2.11.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
