[project]
name = "pydentity-wallet"
version = "0.1.0"
description = "Mobile wallet interface for ACApy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aries-askar>=0.4.4",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-qrcode>=3.2.0",
    "flask-session>=0.8.0",
    "ngrok==1.4.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "webauthn>=2.6.0",
]
